# recon

./: .gitignore  README.md  TERMS.md
.github/docs-landing/: index.html
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish-pypi.yml
node/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsup.config.ts  typedoc.json
node/src/: banner.ts  cli.ts  colors.ts  detect.ts  index.ts  models.ts  pipeline.ts  redact.ts  safety.ts  trufflehog.ts
node/test/: airtable.test.ts  algolia.test.ts  asana.test.ts  aws.test.ts  azure.test.ts  circleci.test.ts  cli.test.ts  cloudflare.test.ts  digitalocean.test.ts  discord.test.ts  fastly.test.ts  figma.test.ts  generic.test.ts  github.test.ts  gitlab.test.ts  google.test.ts  grafana.test.ts  helpers.ts  heroku.test.ts  intercom.test.ts  linear.test.ts  mailgun.test.ts  models.test.ts  netlify.test.ts  notion.test.ts  npm.test.ts  (+18 more)
python/: README.md  mkdocs.yml  pyproject.toml
python/docs/: api.md  index.md
python/src/vtx_recon/: __init__.py  banner.py  cli.py  detect.py  models.py  pipeline.py  redact.py  safety.py  trufflehog.py
python/src/vtx_recon/providers/: __init__.py  airtable.py  algolia.py  anthropic.py  asana.py  aws.py  azure.py  bitbucket.py  circleci.py  cloudflare.py  datadog.py  digitalocean.py  discord.py  dockerhub.py  fastly.py  figma.py  gcp.py  generic.py  github.py  gitlab.py  google.py  grafana.py  heroku.py  hubspot.py  intercom.py  linear.py  mailchimp.py  mailgun.py  netlify.py  newrelic.py  notion.py  npm.py  openai.py  pagerduty.py  paypal.py  planetscale.py  postmark.py  pusher.py  pypi.py  render.py  (+13 more)
python/tests/: conftest.py  test_airtable.py  test_algolia.py  test_anthropic.py  test_asana.py  test_aws.py  test_azure.py  test_bitbucket.py  test_circleci.py  test_cloudflare.py  test_datadog.py  test_digitalocean.py  test_discord.py  test_dockerhub.py  test_fastly.py  test_figma.py  test_gcp.py  test_generic.py  test_github.py  test_gitlab.py  test_google.py  test_grafana.py  test_heroku.py  test_hubspot.py  test_intercom.py  test_linear.py  test_mailchimp.py  test_mailgun.py  test_netlify.py  test_newrelic.py  test_notion.py  test_npm.py  test_openai.py  test_pagerduty.py  test_paypal.py  test_pipeline.py  test_planetscale.py  test_postmark.py  test_pusher.py  test_pypi.py  (+17 more)
(+55 files in other folders)
